fixed frontend dead submit button bug

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -164,7 +164,8 @@ body{
 		</div>
 		<br>
 		<div class="login">
-			<img src="logo.png" style="width:300px;height:300px;>
+			<img src="logo.png" style="width:300px;height:300px;">
+			
 			<form action = "http://localhost:5000/login" method = "post">
 				<input type="text" placeholder="username" name="nm"><br>
 				<input type="password" placeholder="password" name="pass"><br>
